# fmi-tcp-master

./: .gitignore  CMakeLists.txt  README.md
fmu/: fmu_interface.c  modelDescription.xml
include/: Connection.h  Logger.h  WeakConnection.h  common.h
include/common/: common.h
include/master/: Connection.h  FMIClient.h  Master.h  StrongConnection.h  StrongConnector.h
src/: Connection.cpp  FMIClient.cpp  Logger.cpp  Master.cpp  Slave.cpp  StrongConnection.cpp  WeakConnection.cpp  common.cpp  main.cpp
src/common/: Logger.cpp  common.cpp
src/master/: FMIClient.cpp  Logger.cpp  Master.cpp  StrongConnection.cpp  StrongConnector.cpp  main.cpp
src/slave/: Slave.cpp  main.cpp
test/: main.cpp
